<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/imageGraph"
        android:icon="@android:drawable/ic_popup_sync"
        app:showAsAction="ifRoom"
        android:title="" />
    <item
        android:id="@+id/action_refresh"
        android:icon="@android:drawable/ic_popup_sync"
        android:title="@string/refresh"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_cardio"
        android:icon="@mipmap/cardiofreq"
        android:title="@string/button_cardio"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_temp"
        android:icon="@mipmap/thermometer"
        android:title="@string/button_temperature" />
    <item
        android:id="@+id/action_accel"
        android:icon="@mipmap/accelerometer"
        android:title="@string/button"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_parameter"
        android:title="@string/parameter"
        app:showAsAction="never" />

</menu>