<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- A 'parent' preference, which enables/disables child preferences (below)
         when checked/unchecked. -->

    <!-- Allows the user to choose a ringtone in the 'notification' category. -->
    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <!-- NOTE: RingtonePreference's summary should be set to its value by the activity code. -->

    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <PreferenceCategory android:title="Emergency call">
        <EditTextPreference
            android:defaultValue="911"
            android:key="emergency"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/emergencyCall" />
        <EditTextPreference
            android:defaultValue=" "
            android:key="doc"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/docNb" />
    </PreferenceCategory>
    <PreferenceCategory android:title="Close relation">

        <EditTextPreference
            android:defaultValue=" "
            android:key="num1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/nb1" />
        <EditTextPreference
            android:defaultValue=" "
            android:key="num2"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/nb2" />
        <EditTextPreference
            android:defaultValue=" "
            android:key="num3"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/nb3" />
    </PreferenceCategory>

</PreferenceScreen>
