<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cardio.cardio.Parameter">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/login"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login" />

            <Button
                android:id="@+id/chgeName"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:onClick="changeName"
                android:text="@string/ChangeName" />

            <Button
                android:id="@+id/chgePwd"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:onClick="changePwd"
                android:text="@string/ChangePWD" />

            <TextView
                android:id="@+id/authorized"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/authorization" />

            <Switch
                android:id="@+id/callSwitch"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:checked="false"
                android:text="@string/call"
                tools:checked="false" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
