<PreferenceScreen xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context="cardio.cardio.SettingsActivity">


<PreferenceCategory
        android:title="@string/login"
        android:key="pref_key_storage_settings">
        <!-- NOTE: EditTextPreference accepts EditText attributes. -->
        <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
        <EditTextPreference
            android:id="@+id/chgeName"
            android:capitalize="words"
            android:defaultValue="@string/ChangeName"
            android:inputType="textCapWords"
            android:key="name"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/ChangeName" />
        <!-- NOTE: EditTextPreference accepts EditText attributes. -->
        <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
        <EditTextPreference
            android:id="@+id/chgePwd"
            android:capitalize="words"
            android:defaultValue="@string/ChangePWD"
            android:inputType="textCapWords"
            android:key="pwd"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/ChangePWD" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/authorization"
        android:key="authorization">

        <SwitchPreference
            android:defaultValue="true"
            android:key="call"
            android:persistent="false"
            android:summary="@string/pref_description_social_recommendations"
            android:title="Phone Call" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="sms"
            android:summary="@string/pref_description_social_recommendations"
            android:title="SMS" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="gps"
            android:summary="@string/pref_description_social_recommendations"
            android:title="GPS" />



        <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
             dismiss it. -->
        <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
        <ListPreference
            android:defaultValue="-1"
            android:entries="@array/pref_example_list_titles"
            android:entryValues="@array/pref_example_list_values"
            android:key="example_list"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_add_friends_to_messages" />
    </PreferenceCategory>
</PreferenceScreen>
